<resources>
    <string name="app_name">BodyBeat</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="start_workout">Start Workout</string>
    <string name="exercises">Exercises</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="plans">Plans</string>
    <string name="schedule">Schedule</string>
    <string name="parks">Parks</string>
    <string name="my_schedule">My schedule</string>
    <string name="workout_parks">Workout parks</string>
    <string name="show_location">Show location</string>
    <string name="workout_park_detail">Workout park detail</string>
    <string name="workout_park_location">Workout park location</string>
    <string name="upload_workout_park">Upload workout park</string>
    <string name="upload_park">Upload park</string>
    <string name="park_name">Park Name</string>
    <string name="manage_exercises">Manage exercises</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="edit_plan">Edit plan</string>
    <string name="delete_plan">Delete plan</string>
    <string name="exercise_timer">Exercise timer</string>
    <string name="series_timer">Series timer</string>

    <string name="cancel_dialog_title">Cancel creating new plan</string>
    <string name="cancel_dialog_sentence">Are you sure you want to cancel? All changes will be lost.</string>
    <string name="monthly_completion">Monthly completion</string>
    <string name="workout_plans">Workout plans</string>
    <string name="new_workout_plan">New workout plan</string>
    <string name="add_exercise">Add exercise</string>
    <string name="plan_detail">Plan Detail</string>
    <string name="plan_progress">Plan progress</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="delete">Delete</string>
    <string name="repeats">Repeats</string>
    <string name="sets">Sets</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="current_exercise">Current Exercise</string>
    <string name="upcoming_exercises">Upcoming exercises</string>
    <string name="between_series">between series</string>
    <string name="between_exercises">between exercises</string>
    <string name="select_location">Select location</string>
    <string name="apply">Apply</string>
    <string name="change_effect">Change will make effect after application restart</string>
    <string name="choose_language">Choose language</string>
    <string name="app_version">App version:</string>
    <string name="workout_plan_saved">Workout plan saved</string>
    <string name="park_uploaded">Park uploaded</string>
    <string name="image_is_not_picked">Image is not picked</string>

    <!--    Days -->
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wen">WEN</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="workout_done_congratulations">Workout done. Congratulations!!</string>
    <string name="ok">OK</string>
    <string name="you_have_not_choosen_any_location">You have not chosen any location</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>

    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="language_array">
        <item>System</item>
        <item>English</item>
        <item>Czech</item>
    </string-array>
</resources>