<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:padding="16dp"
            android:textAppearance="@style/TextHeader"/>

        <Spinner
            android:id="@+id/languagePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:padding="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ConfirmButton"
            android:gravity="center"
            android:layout_margin="24dp"
            android:text="@string/apply"/>
    </LinearLayout>

    <TextView
        android:id="@+id/applicationVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/ListText"
        android:textAlignment="center"
        android:text="@string/app_version"
        android:layout_margin="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>