<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.plans.NewPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <cz.mendelu.xpaseka.bodybeat.view.TextInputView
            android:id="@+id/workoutPlanTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="Workout title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ListText"
                    android:textAlignment="center"
                    android:text="@string/exercise_timer"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exerciseTimerButton"
                    android:layout_width="120dp"
                    style="@style/EditButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ListText"
                    android:textAlignment="center"
                    android:text="@string/series_timer"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seriesTimerButton"
                    android:layout_width="120dp"
                    style="@style/EditButton"/>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageExercisesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_exercises"
            style="@style/ConfirmButton"
            android:layout_margin="32dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SpacerLabelText"
            style="@style/SpacerLabel"
            android:text="@string/schedule"/>

        <LinearLayout
            android:id="@+id/addScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_add_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_schedule"
                android:layout_marginStart="8dp"
                style="@style/ListText"
                android:layout_gravity="center"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scheduleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/addScheduleButton"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>